Sun Nov 17 06:33:32 2013  Shota Fukumori  <her@sorah.jp>

	* configure.in: Use $LIBS for base of $SOLIBS, also in darwin.
	  By this fix, environment that libgmp is located in $LIBS can build
	  ruby.

Sun Nov 17 01:56:32 2013  Tanaka Akira  <akr@fsij.org>

	* thread_pthread.c (rb_thread_create_timer_thread): Show error
	  message instead of error number.
	  (thread_create_core): Ditto.

	* cont.c (fiber_machine_stack_alloc): Ditto.

Sat Nov 16 18:28:08 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/ultralightparser.rb
	  (REXML::Parsers::UltraLightParser#parse): Fix wrong :start_doctype
	  position.
	  [Bug #9061] [ruby-dev:47778]
	  Patch by Ippei Obayashi. Thanks!!!

	* test/rexml/parser/test_ultra_light.rb: Add a test for this case.

Sat Nov 16 02:13:56 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* cont.c : Introduce ensure rollback mechanism. Please see below.

	* internal.h (ruby_register_rollback_func_for_ensure): catch up above change.
	  Add rollback mechanism API.

	* vm_core.h (typedef struct rb_vm_struct): catch up above change.
	  Introduce ensure-rollback relation table.

	* vm_core.h (typedef struct rb_thread_struct): catch up above change.
	  Introduce ensure stack.

	* eval.c (rb_ensure): catch up above change.
	  Introduce ensure stack.

	* hash.c : New function for rollback ensure, and register it to
	  ensure-rollback relation table. [ruby-dev:47803] [Bug #9105]

	Ensure Rollback Mechanism:
	A rollback's function is a function to rollback a state before ensure's
	function execution.
	When the jump of callcc is across the scope of rb_ensure,
	ensure's functions and rollback's functions are executed appropriately
	for keeping consistency.

	Current API is unstable, and only internal use.

	ruby_register_rollback_func_for_ensure(ensure_func,rollback_func)
	This API create relation ensure's function to rollback's function.
	By registered rollback's function, it is executed When jumping into
	corresponding rb_ensure scope.
